# EggIncEventAnalysis

./: README.md  analysis.ipynb  pyproject.toml
data/: events.json
